--- a/client/package.json
+++ b/client/package.json
@@ -6,18 +6,24 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@mui/base": "^5.0.0-alpha.89",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.0",
     "@mui/styled-engine-sc": "^5.8.0",
     "@mui/styles": "^5.9.0",
     "@mui/system": "^5.9.0",
+    "@mui/x-data-grid": "^5.14.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "material-table": "^2.0.3",
+    "material-ui-search-bar": "^1.0.0",
+    "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "styled-components": "^5.3.5",
